// Copyright (c) 2019 Cisco and/or its affiliates.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at:
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package model;

// ServiceRoute is used to store definition for a Sase Service Route
message ServiceRoute {
    // Sase Service Instance Name
    string service_instance_name = 1;
    // Route network scope
    string route_network_scope = 2;
    // Destination Network
    string destination_network = 3;
    // Gateway IP Address
    string gateway_address = 4;
    // Gateway service ID
    string gateway_service_id = 5;
    // Gateway network. Identifies VRF
    string gateway_network_scope = 6;
    // egress interface
    string egress_interface = 7;
}